--- a/pom.xml
+++ b/pom.xml
@@ -58,7 +58,7 @@
         <version.org.jboss.spec.javax.servlet.api>1.0.0.Final</version.org.jboss.spec.javax.servlet.api>
         <version.junit>4.11</version.junit>
         <version.arquillian>1.1.1.Final</version.arquillian>
-        <version.arquillian.drone>1.2.0.Alpha3</version.arquillian.drone>
+        <version.arquillian.drone>1.2.0.Beta1</version.arquillian.drone>
         <version.metainf>1.1</version.metainf>
         <!-- DataNucleus -->
         <version.org.datanucleus>3.1.2</version.org.datanucleus>
