--- a/pom.xml
+++ b/pom.xml
@@ -41,6 +41,7 @@
         <version.org.jivesoftware.smack>3.1.0</version.org.jivesoftware.smack>
         <version.javax.jai>1.1.1</version.javax.jai>
         <version.org.geotoolkit>3.21</version.org.geotoolkit>
+        <version.javassist>3.18.1-GA</version.javassist>
 
         <version.org.jboss.web>7.2.3.Final</version.org.jboss.web>
         <version.org.eclipse.jdt.core.compiler>3.7.2</version.org.eclipse.jdt.core.compiler>
@@ -245,6 +246,12 @@
             <dependency>
                 <groupId>org.jboss.capedwarf.blue</groupId>
                 <artifactId>capedwarf-datastore</artifactId>
+                <version>${version.org.jboss.capedwarf}</version>
+            </dependency>
+
+            <dependency>
+                <groupId>org.jboss.capedwarf.blue</groupId>
+                <artifactId>capedwarf-endpoints</artifactId>
                 <version>${version.org.jboss.capedwarf}</version>
             </dependency>
 
@@ -728,6 +735,12 @@
                 <groupId>org.geotoolkit</groupId>
                 <artifactId>geotk-coverageio</artifactId>
                 <version>${version.org.geotoolkit}</version>
+            </dependency>
+
+            <dependency>
+                <groupId>org.javassist</groupId>
+                <artifactId>javassist</artifactId>
+                <version>${version.javassist}</version>
             </dependency>
 
             <dependency>
