Upgrade Picket Social

--- a/integrate-cd/pom.xml
+++ b/integrate-cd/pom.xml
@@ -96,7 +96,7 @@
         <!--CD modules here -->
         <dependency>
             <groupId>org.picketlink</groupId>
-            <artifactId>picketlink-consolidated-social</artifactId>
+            <artifactId>picketlink-social</artifactId>
         </dependency>
 
         <dependency>
