--- a/integrate-cd/build.xml
+++ b/integrate-cd/build.xml
@@ -174,7 +174,7 @@
         </module-def>
 
         <module-def name="org.picketlink.social">
-            <maven-resource group="org.picketlink" artifact="picketlink-consolidated-social"/>
+            <maven-resource group="org.picketlink" artifact="picketlink-social"/>
         </module-def>
 
         <module-def name="org.geotoolkit">
