--- a/pom.xml
+++ b/pom.xml
@@ -629,6 +629,13 @@
 
             <dependency>
                 <groupId>com.google.appengine.tck</groupId>
+                <artifactId>appengine-tck-prospectivesearch</artifactId>
+                <version>${version.com.google.appengine.tck}</version>
+                <type>test-jar</type>
+            </dependency>
+
+            <dependency>
+                <groupId>com.google.appengine.tck</groupId>
                 <artifactId>appengine-tck-search</artifactId>
                 <version>${version.com.google.appengine.tck}</version>
                 <type>test-jar</type>
