--- a/pom.xml
+++ b/pom.xml
@@ -32,18 +32,16 @@
         <version.org.apache.lucene>3.6.2</version.org.apache.lucene>
         <version.org.bouncycastle>1.47</version.org.bouncycastle>
         <version.org.codehaus.exec>1.2.1</version.org.codehaus.exec>
-        <version.org.hibernate.search>4.3.0.Final</version.org.hibernate.search>
-        <version.org.jgroups>3.3.2.Final</version.org.jgroups>
-        <version.org.infinispan>5.3.0.Final</version.org.infinispan>
-        <version.org.jboss.jandex>1.1.0.Alpha1</version.org.jboss.jandex>
+        <version.org.hibernate.search>4.5.0.Alpha1</version.org.hibernate.search>
+        <version.org.hibernate.hql>1.0.0.Alpha5</version.org.hibernate.hql>
+        <version.org.jgroups>3.4.0.Final</version.org.jgroups>
+        <version.org.infinispan>6.0.0.CR1</version.org.infinispan>
+        <version.org.jboss.jandex>1.1.0.Final</version.org.jboss.jandex>
         <version.org.jboss.maven.transformer>1.0.0.Beta5</version.org.jboss.maven.transformer>
         <version.org.jivesoftware.smack>3.1.0</version.org.jivesoftware.smack>
         <version.javax.jai>1.1.1</version.javax.jai>
         <version.org.geotoolkit>3.21</version.org.geotoolkit>
         <version.javassist>3.18.1-GA</version.javassist>
-
-        <version.org.jboss.web>7.2.3.Final</version.org.jboss.web>
-        <version.org.eclipse.jdt.core.compiler>3.7.2</version.org.eclipse.jdt.core.compiler>
 
         <version.org.picketbox>4.0.14.Final</version.org.picketbox>
         <version.org.picketbox.picketbox-commons>1.0.0.final</version.org.picketbox.picketbox-commons>
@@ -80,7 +78,7 @@
         <!-- Testing Objectify -->
         <version.objectify>4.0b1</version.objectify>
         <!-- Testing REST -->
-        <version.org.jboss.resteasy>2.3.2.Final</version.org.jboss.resteasy>
+        <version.org.jboss.resteasy>3.0.4.Final</version.org.jboss.resteasy>
         <!-- Needs to be set explicitely to match with org.jacoco:org.jacoco.ant - see testsuite. -->
         <version.xml.maven.plugin>1.0</version.xml.maven.plugin>
         <!-- Maven plugins -->
@@ -894,6 +892,12 @@
             </dependency>
 
             <dependency>
+                <groupId>org.hibernate.hql</groupId>
+                <artifactId>hibernate-hql-parser</artifactId>
+                <version>${version.org.hibernate.hql}</version>
+            </dependency>
+
+            <dependency>
                 <groupId>org.jgroups</groupId>
                 <artifactId>jgroups</artifactId>
                 <version>${version.org.jgroups}</version>
@@ -987,24 +991,6 @@
                 <groupId>org.wildfly</groupId>
                 <artifactId>wildfly-clustering-infinispan</artifactId>
                 <version>${version.jboss.wildfly}</version>
-            </dependency>
-
-            <dependency>
-                <groupId>org.jboss.as</groupId>
-                <artifactId>jboss-as-web</artifactId>
-                <version>${version.jboss.as}</version>
-            </dependency>
-
-            <dependency>
-                <groupId>org.jboss.web</groupId>
-                <artifactId>jbossweb</artifactId>
-                <version>${version.org.jboss.web}</version>
-            </dependency>
-
-            <dependency>
-                <groupId>org.eclipse.jdt.core.compiler</groupId>
-                <artifactId>ecj</artifactId>
-                <version>${version.org.eclipse.jdt.core.compiler}</version>
             </dependency>
 
             <!-- GAE -->
