--- a/integrate-cd/build.xml
+++ b/integrate-cd/build.xml
@@ -46,7 +46,7 @@
         </module-def>
 
         <module-def name="com.google.appengine.endpoints">
-            <maven-resource group="com.google.appengine" artifact="appengine-endpoints" />
+            <maven-resource group="com.google.appengine" artifact="appengine-local-endpoints" />
         </module-def>
 
         <module-def name="javax.jdo.api">
