--- a/pom.xml
+++ b/pom.xml
@@ -1020,6 +1020,12 @@
                 <version>${version.com.google.appengine}</version>
             </dependency>
 
+            <dependency>
+                <groupId>com.google.appengine</groupId>
+                <artifactId>appengine-local-endpoints</artifactId>
+                <version>${version.com.google.appengine}</version>
+            </dependency>
+
             <!-- Testsuite -->
 
             <dependency>
