--- a/tck-api/pom.xml
+++ b/tck-api/pom.xml
@@ -19,7 +19,7 @@
             <plugin>
                 <groupId>org.apache.maven.plugins</groupId>
                 <artifactId>maven-dependency-plugin</artifactId>
-                <version>${version.maven.dependency}</version>
+                <version>${version.dependency.plugin}</version>
                 <executions>
                     <execution>
                         <id>unpack-dependencies</id>
@@ -42,7 +42,7 @@
             <plugin>
                 <groupId>org.apache.maven.plugins</groupId>
                 <artifactId>maven-surefire-plugin</artifactId>
-                <version>${version.maven.surefire}</version>
+                <version>${version.surefire.plugin}</version>
                 <configuration>
                     <runOrder>alphabetical</runOrder>
                     <redirectTestOutputToFile>true</redirectTestOutputToFile>
