Use SNAPSHOTS of Wildfly and Ispn.

--- a/integrate-cd/build.xml
+++ b/integrate-cd/build.xml
@@ -100,9 +100,13 @@
             <maven-resource group="org.jgroups" artifact="jgroups"/>
         </module-def>
 
-        <!-- module-def name="org.infinispan">
+        <module-def name="org.infinispan">
             <maven-resource group="org.infinispan" artifact="infinispan-core"/>
-        </module-def -->
+        </module-def>
+
+        <module-def name="org.infinispan.commons">
+            <maven-resource group="org.infinispan" artifact="infinispan-commons"/>
+        </module-def>
 
         <module-def name="org.infinispan.query">
             <maven-resource group="org.infinispan" artifact="infinispan-query"/>
