--- a/integrate-cd/pom.xml
+++ b/integrate-cd/pom.xml
@@ -211,6 +211,11 @@
 
         <dependency>
             <groupId>org.infinispan</groupId>
+            <artifactId>infinispan-commons</artifactId>
+        </dependency>
+
+        <dependency>
+            <groupId>org.infinispan</groupId>
             <artifactId>infinispan-lucene-directory</artifactId>
         </dependency>
 
