--- a/pom.xml
+++ b/pom.xml
@@ -68,12 +68,13 @@
         <version.org.datanucleus.jdo>3.0.1</version.org.datanucleus.jdo>
         <version.org.datanucleus.jta>1.1.1</version.org.datanucleus.jta>
         <!-- Testing - MapReduce -->
-        <version.com.google.gae.mapper>r452</version.com.google.gae.mapper>
+        <version.com.google.gae.mapper>0.2</version.com.google.gae.mapper>
+        <version.com.google.gae.pipeline>0.2</version.com.google.gae.pipeline>
         <version.charts4j>1.3</version.charts4j>
         <version.commons-logging>1.1.1</version.commons-logging>
         <version.org.json>20090211</version.org.json>
         <!-- Testing GCS Client -->
-        <version.com.google.appengine.tools.cloudstorage>0.3</version.com.google.appengine.tools.cloudstorage>
+        <version.com.google.appengine.tools.cloudstorage>0.3.2</version.com.google.appengine.tools.cloudstorage>
         <!-- Testing Iddx -->
         <version.com.google.api-client>1.11.0-beta</version.com.google.api-client>
         <version.com.google.api-services-bigquery>v2-rev33-1.8.0-beta</version.com.google.api-services-bigquery>
@@ -1056,9 +1057,15 @@
             <!-- Testing MapReduce -->
 
             <dependency>
-                <groupId>com.google.appengine</groupId>
-                <artifactId>appengine-mapper</artifactId>
+                <groupId>com.google.appengine.tools</groupId>
+                <artifactId>appengine-mapreduce</artifactId>
                 <version>${version.com.google.gae.mapper}</version>
+            </dependency>
+
+            <dependency>
+                <groupId>com.google.appengine.tools</groupId>
+                <artifactId>appengine-pipeline</artifactId>
+                <version>${version.com.google.gae.pipeline}</version>
             </dependency>
 
             <dependency>
