--- a/tck-core/pom.xml
+++ b/tck-core/pom.xml
@@ -50,7 +50,7 @@
                         <include>com/google/appengine/tck/**/*Test.java</include>
                     </includes>
                     <systemProperties>
-                        <jboss.dir>${basedir}/../build-as/target/jboss-as-${version.jboss.as}</jboss.dir>
+                        <jboss.dir>${basedir}/../build-as/target/jboss-as-${version.jboss.wildfly}</jboss.dir>
                     </systemProperties>
                 </configuration>
             </plugin>
