--- a/tck-api/pom.xml
+++ b/tck-api/pom.xml
@@ -174,6 +174,13 @@
 
         <dependency>
             <groupId>com.google.appengine.tck</groupId>
+            <artifactId>appengine-tck-oauth</artifactId>
+            <scope>test</scope>
+            <type>test-jar</type>
+        </dependency>
+
+        <dependency>
+            <groupId>com.google.appengine.tck</groupId>
             <artifactId>appengine-tck-prospectivesearch</artifactId>
             <scope>test</scope>
             <type>test-jar</type>
