--- a/integrate-cd/pom.xml
+++ b/integrate-cd/pom.xml
@@ -297,6 +297,11 @@
 
         <dependency>
             <groupId>org.jboss.capedwarf.blue</groupId>
+            <artifactId>capedwarf-gql4j</artifactId>
+        </dependency>
+
+        <dependency>
+            <groupId>org.jboss.capedwarf.blue</groupId>
             <artifactId>capedwarf-images</artifactId>
         </dependency>
 
@@ -434,6 +439,12 @@
             <groupId>org.geotoolkit</groupId>
             <artifactId>geotk-coverageio</artifactId>
         </dependency>
+
+        <dependency>
+            <groupId>org.antlr</groupId>
+            <artifactId>antlr-runtime</artifactId>
+        </dependency>
+
     </dependencies>
 
     <profiles>
