--- a/pom.xml
+++ b/pom.xml
@@ -15,8 +15,8 @@
     <packaging>pom</packaging>
 
     <properties>
-        <version.jboss.wildfly>8.0.0.Beta2-SNAPSHOT</version.jboss.wildfly>
-        <version.org.jboss.xnio>3.1.0.CR7</version.org.jboss.xnio>
+        <version.jboss.wildfly>8.0.0.CR1</version.jboss.wildfly>
+        <version.org.jboss.xnio>3.2.0.Beta4</version.org.jboss.xnio>
         <version.org.jboss.capedwarf.shared>1.0.0-SNAPSHOT</version.org.jboss.capedwarf.shared>
         <version.org.jboss.as.capedwarf>1.0.0-SNAPSHOT</version.org.jboss.as.capedwarf>
         <version.org.jboss.capedwarf>1.0.0-SNAPSHOT</version.org.jboss.capedwarf>
@@ -32,9 +32,9 @@
         <version.org.apache.lucene>3.6.2</version.org.apache.lucene>
         <version.org.bouncycastle>1.47</version.org.bouncycastle>
         <version.org.codehaus.exec>1.2.1</version.org.codehaus.exec>
-        <version.org.hibernate.search>4.5.0.Alpha1</version.org.hibernate.search>
+        <version.org.hibernate.search>4.5.0.Alpha2</version.org.hibernate.search>
         <version.org.hibernate.hql>1.0.0.Alpha5</version.org.hibernate.hql>
-        <version.org.jgroups>3.4.0.Final</version.org.jgroups>
+        <version.org.jgroups>3.4.1.Final</version.org.jgroups>
         <version.org.infinispan>6.0.1.Final</version.org.infinispan>
         <version.org.jboss.jandex>1.1.0.Final</version.org.jboss.jandex>
         <version.org.jboss.maven.transformer>1.0.0.Beta5</version.org.jboss.maven.transformer>
@@ -44,9 +44,9 @@
         <version.javassist>3.18.1-GA</version.javassist>
         <version.antlr>3.1</version.antlr>
 
-        <version.org.picketbox>4.0.14.Final</version.org.picketbox>
+        <version.org.picketbox>4.0.20.Beta2</version.org.picketbox>
         <version.org.picketbox.picketbox-commons>1.0.0.final</version.org.picketbox.picketbox-commons>
-        <version.org.picketlink>2.1.8.Final</version.org.picketlink>
+        <version.org.picketlink>2.1.10.Final</version.org.picketlink>
         <version.org.picketlink.social>2.5.2.Final</version.org.picketlink.social>
         <version.org.openid4java>0.9.6</version.org.openid4java>
         <version.net.sourceforge.nekohtml>1.9.10</version.net.sourceforge.nekohtml>
@@ -54,7 +54,7 @@
 
         <version.rhino.js>1.7R2</version.rhino.js>
         <version.javax.jpa2>1.0.1.Final</version.javax.jpa2>
-        <version.org.jboss.spec.javax.servlet.api>1.0.0.Beta1</version.org.jboss.spec.javax.servlet.api>
+        <version.org.jboss.spec.javax.servlet.api>1.0.0.Final</version.org.jboss.spec.javax.servlet.api>
         <version.junit>4.11</version.junit>
         <version.arquillian>1.1.1.Final</version.arquillian>
         <version.arquillian.drone>1.2.0.Final</version.arquillian.drone>
@@ -79,7 +79,7 @@
         <!-- Testing Objectify -->
         <version.objectify>4.0rc2</version.objectify>
         <!-- Testing REST -->
-        <version.org.jboss.resteasy>3.0.4.Final</version.org.jboss.resteasy>
+        <version.org.jboss.resteasy>3.0.6.Final</version.org.jboss.resteasy>
         <!-- Needs to be set explicitely to match with org.jacoco:org.jacoco.ant - see testsuite. -->
         <version.xml.maven.plugin>1.0</version.xml.maven.plugin>
         <!-- Maven plugins -->
