Add labs api dep.

--- a/tck-modules/pom.xml
+++ b/tck-modules/pom.xml
@@ -112,6 +112,12 @@
         <!-- Libs -->
 
         <dependency>
+            <groupId>com.google.appengine</groupId>
+            <artifactId>appengine-api-labs</artifactId>
+            <scope>test</scope>
+        </dependency>
+
+        <dependency>
             <groupId>com.google.appengine.tools</groupId>
             <artifactId>appengine-gcs-client</artifactId>
             <scope>test</scope>
