--- a/tck-core/pom.xml
+++ b/tck-core/pom.xml
@@ -163,6 +163,13 @@
             <scope>test</scope>
         </dependency>
 
+        <dependency>
+            <groupId>org.jboss.arquillian.extension</groupId>
+            <artifactId>arquillian-drone-webdriver-depchain</artifactId>
+            <scope>test</scope>
+            <type>pom</type>
+        </dependency>
+
     </dependencies>
 
 </project>
