--- a/integrate-cd/pom.xml
+++ b/integrate-cd/pom.xml
@@ -445,6 +445,16 @@
             <artifactId>antlr-runtime</artifactId>
         </dependency>
 
+        <dependency>
+            <groupId>org.wildfly</groupId>
+            <artifactId>mail-ra-api</artifactId>
+        </dependency>
+
+        <dependency>
+            <groupId>org.wildfly</groupId>
+            <artifactId>mail-ra-impl</artifactId>
+        </dependency>
+
     </dependencies>
 
     <profiles>
