--- a/pom.xml
+++ b/pom.xml
@@ -15,7 +15,7 @@
     <packaging>pom</packaging>
 
     <properties>
-        <version.jboss.wildfly>8.0.0.CR1</version.jboss.wildfly>
+        <version.jboss.wildfly>8.0.0.Final-SNAPSHOT</version.jboss.wildfly>
         <version.org.jboss.xnio>3.2.0.Beta4</version.org.jboss.xnio>
         <version.org.jboss.capedwarf.shared>1.0.0-SNAPSHOT</version.org.jboss.capedwarf.shared>
         <version.org.jboss.as.capedwarf>1.0.0-SNAPSHOT</version.org.jboss.as.capedwarf>
@@ -32,7 +32,7 @@
         <version.org.apache.lucene>3.6.2</version.org.apache.lucene>
         <version.org.bouncycastle>1.47</version.org.bouncycastle>
         <version.org.codehaus.exec>1.2.1</version.org.codehaus.exec>
-        <version.org.hibernate.search>4.5.0.Alpha2</version.org.hibernate.search>
+        <version.org.hibernate.search>4.5.0.Final</version.org.hibernate.search>
         <version.org.hibernate.hql>1.0.0.Alpha5</version.org.hibernate.hql>
         <version.org.jgroups>3.4.1.Final</version.org.jgroups>
         <version.org.infinispan>6.0.1.Final</version.org.infinispan>
@@ -67,8 +67,9 @@
         <version.org.datanucleus.jdo>3.0.1</version.org.datanucleus.jdo>
         <version.org.datanucleus.jta>1.1.1</version.org.datanucleus.jta>
         <!-- Testing - MapReduce -->
-        <version.com.google.gae.mapper>0.2</version.com.google.gae.mapper>
-        <version.com.google.gae.pipeline>0.2</version.com.google.gae.pipeline>
+        <version.com.google.gae.mapreduce>0.3</version.com.google.gae.mapreduce>
+        <version.com.google.gae.pipeline>0.2.4</version.com.google.gae.pipeline>
+        <version.fastutil>6.5.12</version.fastutil>
         <version.charts4j>1.3</version.charts4j>
         <version.commons-logging>1.1.1</version.commons-logging>
         <version.org.json>20090211</version.org.json>
@@ -1082,13 +1083,19 @@
             <dependency>
                 <groupId>com.google.appengine.tools</groupId>
                 <artifactId>appengine-mapreduce</artifactId>
-                <version>${version.com.google.gae.mapper}</version>
+                <version>${version.com.google.gae.mapreduce}</version>
             </dependency>
 
             <dependency>
                 <groupId>com.google.appengine.tools</groupId>
                 <artifactId>appengine-pipeline</artifactId>
                 <version>${version.com.google.gae.pipeline}</version>
+            </dependency>
+
+            <dependency>
+                <groupId>it.unimi.dsi</groupId>
+                <artifactId>fastutil</artifactId>
+                <version>${version.fastutil}</version>
             </dependency>
 
             <dependency>
