--- a/pom.xml
+++ b/pom.xml
@@ -15,8 +15,8 @@
     <packaging>pom</packaging>
 
     <properties>
-        <version.jboss.wildfly>8.0.0.Final-SNAPSHOT</version.jboss.wildfly>
-        <version.org.jboss.xnio>3.2.0.Beta4</version.org.jboss.xnio>
+        <version.jboss.wildfly>8.0.0.Final</version.jboss.wildfly>
+        <version.org.jboss.xnio>3.2.0.Final</version.org.jboss.xnio>
         <version.org.jboss.capedwarf.shared>1.0.0-SNAPSHOT</version.org.jboss.capedwarf.shared>
         <version.org.jboss.as.capedwarf>1.0.0-SNAPSHOT</version.org.jboss.as.capedwarf>
         <version.org.jboss.capedwarf>1.0.0-SNAPSHOT</version.org.jboss.capedwarf>
@@ -26,15 +26,15 @@
         <version.arquillian.gae>1.0.0.Beta7</version.arquillian.gae>
         <!-- External deps -->
         <version.com.google.appengine>1.8.9</version.com.google.appengine>
-        <version.com.google.guava>15.0</version.com.google.guava>
+        <version.com.google.guava>16.0.1</version.com.google.guava>
         <version.org.apache.ant>1.8.2</version.org.apache.ant>
         <version.org.apache.httpcomponents>4.2.1</version.org.apache.httpcomponents>
         <version.org.apache.lucene>3.6.2</version.org.apache.lucene>
         <version.org.bouncycastle>1.47</version.org.bouncycastle>
         <version.org.codehaus.exec>1.2.1</version.org.codehaus.exec>
         <version.org.hibernate.search>4.5.0.Final</version.org.hibernate.search>
-        <version.org.hibernate.hql>1.0.0.Alpha5</version.org.hibernate.hql>
-        <version.org.jgroups>3.4.1.Final</version.org.jgroups>
+        <version.org.hibernate.hql>1.0.0.Alpha6</version.org.hibernate.hql>
+        <version.org.jgroups>3.4.2.Final</version.org.jgroups>
         <version.org.infinispan>6.0.1.Final</version.org.infinispan>
         <version.org.jboss.jandex>1.1.0.Final</version.org.jboss.jandex>
         <version.org.jboss.maven.transformer>1.0.0.Beta5</version.org.jboss.maven.transformer>
@@ -45,7 +45,7 @@
         <version.antlr>3.1</version.antlr>
         <version.jboss.wildfly.mailra>1.0.0.Alpha2</version.jboss.wildfly.mailra>
 
-        <version.org.picketbox>4.0.20.Beta2</version.org.picketbox>
+        <version.org.picketbox>4.0.20.Final</version.org.picketbox>
         <version.org.picketbox.picketbox-commons>1.0.0.final</version.org.picketbox.picketbox-commons>
         <version.org.picketlink>2.1.10.Final</version.org.picketlink>
         <version.org.picketlink.social>2.5.2.Final</version.org.picketlink.social>
